# magasinopsjon

./: .env.example  .gitignore  README.md  pyproject.toml
data/processed/: no2_prices_daily.parquet  no2_prices_hourly.parquet  nve_reservoir_no2.parquet  schwartz_full.json  schwartz_postcrisis.json
notebooks/: 01_data_exploration.ipynb  02_price_model_calibration.ipynb  03_option_valuation.ipynb
report/: summary.md
src/: __init__.py  data_loader.py  option_value.py  plotting.py  price_model.py
