[project]
name = "magasinopsjon"
version = "0.1.0"
description = "Realopsjonsmodell for verdsetting av magasinvann i norsk vannkraft (NO2)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Numerikk og dataframer
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pyarrow>=15.0",        # parquet-lagring for prosessert data

    # Plotting
    "matplotlib>=3.8",

    # Notebooks
    "jupyterlab>=4.0",
    "ipykernel>=6.28",

    # Datahenting fra ENTSO-E Transparency Platform
    "entsoe-py>=0.6",       # Python-wrapper for ENTSO-E REST API
    "python-dotenv>=1.0",   # Last API-token fra .env (utenfor git)
    "requests>=2.31",       # underliggende HTTP (entsoe-py bruker den også)
]

# Hatchling bygger pakken slik at `from src.price_model import ...`
# fungerer fra notebooks når miljøet er installert med `uv sync`.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
